Bullshit fix to alignment

--- a/queries.css
+++ b/queries.css
@@ -32,6 +32,15 @@
     bottom: -7.5%;
     width: clamp(154px, 14vw, 99999rem);
   }
+  #intro,
+#work,
+#philosophy,
+#experiences,
+#references,
+#thoughts,
+#contact {
+  margin-left: calc(var(--gap) * .25);
+}
 }
 
 @media (max-width: 1024px) {
@@ -57,6 +66,15 @@
     bottom: 5%;
     transform: rotate(10deg);
   }
+  #intro,
+#work,
+#philosophy,
+#experiences,
+#references,
+#thoughts,
+#contact {
+  margin-left: calc(var(--gap) * .35);
+}
 }
 
 @media (max-width: 768px) {
@@ -106,6 +124,15 @@
   nav {
     display: none;
   }
+  #intro,
+#work,
+#philosophy,
+#experiences,
+#references,
+#thoughts,
+#contact {
+  margin-left: var(--gap);
+}
 }
 
 @media (max-width: 500px) {
